--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Timer</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
     />
-    <link rel="dtylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <main>
@@ -20,7 +20,7 @@
           <span class="value" data-days>00</span>
           <span class="label">Days</span>
         </div>
-        <div class="field">,                                                                                                                                                                                         
+        <div class="field">                                                                                                                                                                                         
           <span class="value" data-hours>00</span>
           <span class="label">Hours</span>
         </div>
